--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,77 @@
+.back {
+  background: url(../../Solar-System/src/assets/Space.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  animation: back linear;
+  animation-timeline: view();
+}
+
 .plane {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.mercDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.venusDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.earthDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.marsDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.jDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.satDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.uDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+.nDiv {
+  animation: fade-in linear;
+  animation-timeline: view();
+}
+
+/* @keyframes back {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+} */
+
+@keyframes fade-in {
+  0% {
+    scale: 0.1;
+    opacity: 1;
+  }
+  50% {
+    scale: 2;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
