--- a/src/Components/Mercury3d/Mercury3d.css
+++ b/src/Components/Mercury3d/Mercury3d.css
@@ -1,30 +1,23 @@
-body {
-  background: url(../../assets/Space.jpg) center no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-}
-
 .mercury {
-  margin: 100px;
-  width: 15em;
-  height: 15em;
+  margin: 500px;
+  width: 12em;
+  height: 12em;
   background: url(../../assets/MercuryFlat.jpg);
-  box-shadow: inset -2em -2em 2em #000;
+  box-shadow: inset -1em -1em 1em #000;
   position: relative;
   animation: rotate 25s linear infinite;
   transition: transform 2s ease-in-out;
 }
 
 .mercury:hover {
-  transform: scale(1.2); /* Scale up to 1.2 times the original size on hover */
+  /* transform: scale(1.2); */
 }
 
 .mercMoon {
   background: url(../../assets/Moon.jpg);
-  box-shadow: inset -1.5em -1.5em 1.5em #000, -0.2em -0.2em 0.5em #ccc;
-  width: 6em;
-  height: 6em;
+  box-shadow: inset -0.2em -0.2em 0.2em #000, -0.2em -0.2em 0.5em #ccc;
+  width: 2em;
+  height: 2em;
   position: absolute;
   left: -11em;
   top: 50%;
