--- a/src/Components/Orbit/Orbit.css
+++ b/src/Components/Orbit/Orbit.css
@@ -31,6 +31,28 @@
   background-color: #9f98e6;
 }
 
+.venusOrbit {
+  position: absolute;
+  top: 75px;
+  left: 75px;
+  width: 150px;
+  height: 150px;
+  border: 2px #4a437f dashed;
+  border-radius: 100%;
+  -webkit-animation: spin-right 10s linear infinite;
+  animation: spin-right 10s linear infinite;
+}
+
+.venusInner {
+  position: absolute;
+  top: 12px;
+  left: -6px;
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
+  background-color: #fbfbfb;
+}
+
 /* ---------- Middle orbit - This is the circles second closest to the central point ---------- */
 #middle-orbit {
   position: absolute;
@@ -62,7 +84,7 @@
   left: 0;
   width: 294px;
   height: 294px;
-  border: 2px #4a437f dashed;
+  border: 5px #4a437f dashed;
   border-radius: 100%;
   -webkit-animation: spin-right 20s linear infinite;
   animation: spin-right 20s linear infinite;
