--- a/src/Components/Uranas3d/Uranas3d.css
+++ b/src/Components/Uranas3d/Uranas3d.css
@@ -1,7 +1,7 @@
 .uranas {
-  margin: 250px;
-  width: 30em;
-  height: 30em;
+  margin: 500px;
+  width: 18em;
+  height: 18em;
   background: url(../../assets/UranasFlat.jpg);
   box-shadow: inset -2em -2em 2em #000, -0.7em -0.7em 1em #3784f8;
   position: relative;
@@ -10,7 +10,7 @@
 }
 
 .uranas:hover {
-  transform: scale(1.2); /* Scale up to 1.2 times the original size on hover */
+  /* transform: scale(1.2); */
 }
 
 .uMoon {
