--- a/src/Components/Earth3d/Earth3d.css
+++ b/src/Components/Earth3d/Earth3d.css
@@ -1,5 +1,5 @@
 .earth {
-  margin: 1000px;
+  /* margin: 1000px; */
   width: 16em;
   height: 16em;
   background: url(../../assets/EarthFlat.jpg);
@@ -31,6 +31,14 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.eCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
 }
 
 @keyframes rotate {
