--- a/src/Components/Jupiter3d/Jupiter3d.css
+++ b/src/Components/Jupiter3d/Jupiter3d.css
@@ -1,7 +1,7 @@
 .jupiter {
-  margin: 500px;
-  width: 21em;
-  height: 21em;
+  /* margin: 200px; */
+  width: 18em;
+  height: 18em;
   background: url(../../assets/JupiterFlat.jpg);
   box-shadow: inset -2em -2em 2em #000, -0.5em -0.5em 1em #a1810b;
   position: relative;
@@ -14,7 +14,7 @@
 }
 
 .jMoon {
-  background: url(../../assets/Moon.jpg);
+  background: url(../../assets/JMoonE.jpg);
   box-shadow: inset -1.5em -1.5em 1.5em #000, -0.2em -0.2em 0.5em #ccc;
   width: 6em;
   height: 6em;
@@ -31,6 +31,14 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.jCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
 }
 
 @keyframes rotate {
