--- a/src/Components/Mercury3d/Mercury3d.css
+++ b/src/Components/Mercury3d/Mercury3d.css
@@ -1,11 +1,11 @@
 .mercury {
-  margin: 500px;
-  width: 12em;
-  height: 12em;
+  /* margin: 300px; */
+  width: 10em;
+  height: 10em;
   background: url(../../assets/MercuryFlat.jpg);
   box-shadow: inset -1em -1em 1em #000;
   position: relative;
-  animation: rotate 25s linear infinite;
+  animation: rotate 60s linear infinite;
   transition: transform 2s ease-in-out;
 }
 
@@ -31,6 +31,18 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.mCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
+}
+
+p {
+  text-align: center;
 }
 
 @keyframes rotate {
