--- a/src/Components/Nuptune3d/Neptune3d.css
+++ b/src/Components/Nuptune3d/Neptune3d.css
@@ -1,7 +1,7 @@
 .neptune {
-  margin: 250px;
-  width: 17em;
-  height: 17em;
+  /* margin: 200px; */
+  width: 15em;
+  height: 15em;
   background: url(../../assets/NeptuneFlat.jpg);
   box-shadow: inset -2em -2em 2em #000, -0.5em -0.5em 1em #189eca;
   position: relative;
@@ -31,6 +31,14 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.nCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
 }
 
 @keyframes rotate {
