--- a/src/Components/Saturn3d/Saturn3d.css
+++ b/src/Components/Saturn3d/Saturn3d.css
@@ -1,7 +1,7 @@
 .saturn {
-  margin: 500px;
-  width: 21em;
-  height: 21em;
+  /* margin: 200px; */
+  width: 17em;
+  height: 17em;
   background: url(../../assets/SaturnFlat.jpg);
   box-shadow: inset -2em -2em 2em #000000, -0.5em -0.5em 1.5em #a09809;
   position: relative;
@@ -31,6 +31,14 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.sCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
 }
 
 @keyframes rotate {
