--- a/src/Components/Uranus3d/Uranus3d.css
+++ b/src/Components/Uranus3d/Uranus3d.css
@@ -1,7 +1,7 @@
-.uranas {
-  margin: 500px;
-  width: 18em;
-  height: 18em;
+.uranus {
+  /* margin: 200px; */
+  width: 16em;
+  height: 16em;
   background: url(../../assets/UranasFlat.jpg);
   box-shadow: inset -2em -2em 2em #000, -0.7em -0.7em 1em #3784f8;
   position: relative;
@@ -9,7 +9,7 @@
   transition: transform 2s ease-in-out;
 }
 
-.uranas:hover {
+.uranus:hover {
   /* transform: scale(1.2); */
 }
 
@@ -33,6 +33,13 @@
   background-size: 200% 100%;
 }
 
+.uCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
+}
 @keyframes rotate {
   to {
     background-position: -200% 0;
