--- a/src/Components/Venus3d/Venus3d.css
+++ b/src/Components/Venus3d/Venus3d.css
@@ -1,11 +1,11 @@
 .venus {
-  margin: 500px;
-  width: 15em;
-  height: 15em;
+  /* margin: 200px; */
+  width: 13em;
+  height: 13em;
   background: url(../../assets/venusFlat.jpg);
   box-shadow: inset -2em -2em 2em #000, -0.5em -0.5em 1em #c2b209;
   position: relative;
-  animation: rotate 25s linear infinite;
+  animation: rotate 40s linear infinite;
   transition: transform 2s ease-in-out;
 }
 
@@ -22,7 +22,7 @@
   left: -11em;
   top: 50%;
   transform: translateY(-50%);
-  animation: rotate 10s linear infinite, orbit 20s infinite ease-in-out;
+  animation: rotate 15s linear infinite, orbit 15s infinite ease-in-out;
   z-index: 1;
 }
 
@@ -31,6 +31,14 @@
   border-radius: 50%;
   background-repeat: repeat;
   background-size: 200% 100%;
+}
+
+.vCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  /* border: solid; */
 }
 
 @keyframes rotate {
