--- a/src/Components/Venus3d/Venus3d.css
+++ b/src/Components/Venus3d/Venus3d.css
@@ -41,6 +41,11 @@
   /* border: solid; */
 }
 
+.board {
+  display: flex;
+  border: solid;
+}
+
 @keyframes rotate {
   to {
     background-position: -200% 0;
