--- a/src/App.css
+++ b/src/App.css
@@ -16,46 +16,22 @@
 }
 
 .plane > * {
-  margin: 200px;
+  margin: 300px;
   font-family: "Roboto";
+  /* background: linear-gradient(185deg, #dd9f6500 0.36%, #b823e113);` */
+
 }
 
-.mercDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
+.mercDiv,
+.venusDiv,
+.earthDiv,
+.marsDiv,
+.jDiv,
+.satDiv,
+.uDiv,
+.nDiv
 
-.venusDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.earthDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.marsDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.jDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.satDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.uDiv {
-  animation: fade-in linear;
-  animation-timeline: view();
-}
-
-.nDiv {
+ {
   animation: fade-in linear;
   animation-timeline: view();
 }
