--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,16 @@
 }
 
 .plane > * {
-  margin: 300px;
+  margin: 500px;
   font-family: "Roboto";
   /* background: linear-gradient(185deg, #dd9f6500 0.36%, #b823e113);` */
-
 }
+
+/* .container {
+  border: solid;
+  display: flex;
+  flex-direction: column;
+} */
 
 .mercDiv,
 .venusDiv,
@@ -29,11 +34,11 @@
 .jDiv,
 .satDiv,
 .uDiv,
-.nDiv
-
- {
+.nDiv {
+  display: flex;
   animation: fade-in linear;
   animation-timeline: view();
+  /* border: solid; */
 }
 
 @keyframes fade-in {
