--- a/src/Components/Jupiter3d/Jupiter3d.css
+++ b/src/Components/Jupiter3d/Jupiter3d.css
@@ -37,8 +37,109 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
-  /* border: solid; */
+  margin: 100px;
+}
+
+.container {
+  width: 400px;
+  animation-timeline: view();
+
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.jTemp:after {
+  animation-name: jTemp;
+}
+
+@keyframes jTemp {
+  from {
+    width: 0%;
+    background-color: rgb(17, 0, 255);
+  }
+
+  to {
+    width: 40%;
+  }
+
+  100% {
+  }
+}
+
+li.jMass:after {
+  animation-name: jMass;
+}
+
+@keyframes jMass {
+  to {
+    width: 100%;
+  }
+}
+
+li.jupMoon:after {
+  animation-name: jupMoon;
+}
+
+@keyframes jupMoon {
+  to {
+    width: 90%;
+  }
+}
+
+li.jEV:after {
+  animation-name: jEV;
+}
+
+@keyframes jEV {
+  to {
+    width: 80%;
+  }
+}
+
+li.jDays:after {
+  animation-name: jDays;
+}
+
+@keyframes jDays {
+  to {
+    width: 50%;
+  }
 }
 
 @keyframes rotate {
