--- a/src/Components/Mercury3d/Mercury3d.css
+++ b/src/Components/Mercury3d/Mercury3d.css
@@ -33,7 +33,8 @@
   background-size: 200% 100%;
 }
 
-.mCard {
+.mCard,
+.mContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,8 +42,98 @@
   /* border: solid; */
 }
 
+.mContainer {
+  width: 200px;
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
+}
+
 p {
   text-align: center;
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.mercTemp:after {
+  animation-name: mTemp;
+}
+
+@keyframes mTemp {
+  to {
+    width: 90%;
+  }
+
+  0% {
+    background-color: aqua;
+  }
+
+  100% {
+    background-color: rgb(255, 51, 0);
+  }
+}
+
+li.mercMass:after {
+  animation-name: mercMass;
+}
+
+@keyframes mercMass {
+  to {
+    width: 10%;
+  }
+}
+
+li.mercEV:after {
+  animation-name: mercEV;
+}
+
+@keyframes mercEV {
+  to {
+    width: 10%;
+  }
+}
+
+li.mercDays:after {
+  animation-name: days;
+}
+
+@keyframes days {
+  to {
+    width: 10%;
+  }
 }
 
 @keyframes rotate {
