--- a/src/Components/Venus3d/Venus3d.css
+++ b/src/Components/Venus3d/Venus3d.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 400px;
   /* margin-top: 200px; */
   /* border: solid; */
 }
@@ -46,11 +47,102 @@
   /* border: solid; */
 }
 
-.card {
+.rCard,
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* border: solid; */
+}
+
+.container {
+  width: 400px;
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.temp:after {
+  animation-name: temp;
+}
+
+@keyframes temp {
+  to {
+    width: 100%;
+  }
+
+  0% {
+    background-color: aqua;
+  }
+
+  100% {
+    background-color: rgb(255, 51, 0);
+  }
+}
+
+li.vol:after {
+  animation-name: vol;
+}
+
+@keyframes vol {
+  to {
+    width: 90%;
+  }
+}
+
+li.eV:after {
+  animation-name: eV;
+}
+
+@keyframes eV {
+  to {
+    width: 20%;
+  }
+}
+
+li.days:after {
+  animation-name: days;
+}
+
+@keyframes days {
+  to {
+    width: 20%;
+  }
 }
 
 @keyframes rotate {
