--- a/src/Components/Earth3d/Earth3d.css
+++ b/src/Components/Earth3d/Earth3d.css
@@ -37,8 +37,107 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
+  margin-left: 200px;
   /* border: solid; */
+}
+
+.container {
+  width: 400px;
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.earthTemp:after {
+  animation-name: earthTemp;
+}
+
+@keyframes earthTemp {
+  from {
+    width: 0%;
+    background-color: rgb(17, 0, 255);
+  }
+
+  to {
+    width: 60%;
+    background-color: rgb(0, 255, 4);
+  }
+
+  100% {
+  }
+}
+
+li.earthMass:after {
+  animation-name: earthMass;
+}
+
+@keyframes earthMass {
+  to {
+    width: 45%;
+  }
+}
+
+li.earthMoon:after {
+  animation-name: earthMoon;
+}
+
+@keyframes earthMoon {
+  to {
+    width: 10%;
+  }
+}
+
+li.earthEV:after {
+  animation-name: earthEV;
+}
+
+@keyframes earthEV {
+  to {
+    width: 35%;
+  }
+}
+
+li.earthDays:after {
+  animation-name: earthDays;
+}
+
+@keyframes earthDays {
+  to {
+    width: 40%;
+  }
 }
 
 @keyframes rotate {
