--- a/src/Components/Nuptune3d/Neptune3d.css
+++ b/src/Components/Nuptune3d/Neptune3d.css
@@ -37,8 +37,110 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
+  margin-left: 200px;
   /* border: solid; */
+}
+
+.container {
+  width: 400px;
+  animation-timeline: view();
+
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.nepTemp:after {
+  animation-name: nepTemp;
+}
+
+@keyframes nepTemp {
+  from {
+    width: 0%;
+    background-color: rgb(17, 0, 255);
+  }
+
+  to {
+    width: 5%;
+  }
+
+  100% {
+  }
+}
+
+li.nepMass:after {
+  animation-name: nepMass;
+}
+
+@keyframes nepMass {
+  to {
+    width: 70%;
+  }
+}
+
+li.nepMoon:after {
+  animation-name: nepMoon;
+}
+
+@keyframes nepMoon {
+  to {
+    width: 40%;
+  }
+}
+
+li.nepEV:after {
+  animation-name: nepEV;
+}
+
+@keyframes nepEV {
+  to {
+    width: 60%;
+  }
+}
+
+li.nepDays:after {
+  animation-name: nepDays;
+}
+
+@keyframes nepDays {
+  to {
+    width: 100%;
+  }
 }
 
 @keyframes rotate {
