--- a/src/Components/Saturn3d/Saturn3d.css
+++ b/src/Components/Saturn3d/Saturn3d.css
@@ -37,8 +37,110 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
+  margin: 200px;
   /* border: solid; */
+}
+
+.container {
+  width: 400px;
+  animation-timeline: view();
+
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.satTemp:after {
+  animation-name: satTemp;
+}
+
+@keyframes satTemp {
+  from {
+    width: 0%;
+    background-color: rgb(17, 0, 255);
+  }
+
+  to {
+    width: 20%;
+  }
+
+  100% {
+  }
+}
+
+li.satMass:after {
+  animation-name: satMass;
+}
+
+@keyframes satMass {
+  to {
+    width: 80%;
+  }
+}
+
+li.satMoon:after {
+  animation-name: satMoon;
+}
+
+@keyframes satMoon {
+  to {
+    width: 100%;
+  }
+}
+
+li.satEV:after {
+  animation-name: satEV;
+}
+
+@keyframes satEV {
+  to {
+    width: 60%;
+  }
+}
+
+li.satDays:after {
+  animation-name: satDays;
+}
+
+@keyframes satDays {
+  to {
+    width: 90%;
+  }
 }
 
 @keyframes rotate {
