--- a/src/Components/Uranus3d/Uranus3d.css
+++ b/src/Components/Uranus3d/Uranus3d.css
@@ -37,9 +37,108 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
+  margin-left: 200px;
   /* border: solid; */
 }
+
+.container {
+  width: 400px;
+}
+
+h2 {
+  align-self: center;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  margin: 40px 0;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 0.5);
+  border-radius: 1000px;
+}
+li::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
+  width: 0;
+  height: 15px;
+  background-color: rgba(54, 126, 223, 1);
+  border-radius: 1000px;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+li.uranusTemp:after {
+  animation-name: uranusTemp;
+}
+
+@keyframes uranusTemp {
+  from {
+    width: 0%;
+    background-color: rgb(17, 0, 255);
+  }
+
+  to {
+    width: 10%;
+  }
+
+  100% {
+  }
+}
+
+li.uranusMass:after {
+  animation-name: uranusMass;
+}
+
+@keyframes uranusMass {
+  to {
+    width: 70%;
+  }
+}
+
+li.uranusMoon:after {
+  animation-name: uranusMoon;
+}
+
+@keyframes uranusMoon {
+  to {
+    width: 50%;
+  }
+}
+
+li.uranusEV:after {
+  animation-name: uranusEV;
+}
+
+@keyframes uranusEV {
+  to {
+    width: 50%;
+  }
+}
+
+li.uranusDays:after {
+  animation-name: uranusDays;
+}
+
+@keyframes uranusDays {
+  to {
+    width: 90%;
+  }
+}
+
 @keyframes rotate {
   to {
     background-position: -200% 0;
