--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,19 @@
 }
 
 .plane > * {
-  margin: 500px;
+  /* border: solid; */
+  margin: 300px;
   /* margin-left: 450px; */
   font-family: "Roboto";
   /* background: linear-gradient(185deg, #dd9f6500 0.36%, #b823e113);` */
 }
 
-/* .container {
-  border: solid;
-  display: flex;
-  flex-direction: column;
-} */
+.container {
+  /* border: solid; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  justify-content: center;
+}
 
 .mercDiv,
 .venusDiv,
@@ -40,10 +42,6 @@
   animation: fade-in linear;
   animation-timeline: view();
   /* border: solid; */
-}
-
-.container {
-  /* animation-timeline: view(); */
 }
 
 @keyframes fade-in {
