--- a/src/Components/Earth3d/Earth3d.css
+++ b/src/Components/Earth3d/Earth3d.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 200px;
+  margin: 200px;
   /* border: solid; */
 }
 
