--- a/src/Components/Nuptune3d/Neptune3d.css
+++ b/src/Components/Nuptune3d/Neptune3d.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 200px;
+  margin: 200px;
   /* border: solid; */
 }
 
@@ -48,7 +48,6 @@
   /* margin: 50px auto 0; */
   /* padding: 20px; */
 }
-
 h2 {
   align-self: center;
 }
