--- a/src/Components/Uranus3d/Uranus3d.css
+++ b/src/Components/Uranus3d/Uranus3d.css
@@ -37,12 +37,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 200px;
+  margin: 200px;
   /* border: solid; */
 }
 
 .container {
   width: 400px;
+  animation-timeline: view();
+
+  /* margin: 50px auto 0; */
+  /* padding: 20px; */
 }
 
 h2 {
